--- a/nav.html
+++ b/nav.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="viewport" content="width=320px">
 		<title>jQuery Mobile Bootstrap Theme</title>
 		<link rel="stylesheet" href="themes/Bootstrap.css">
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
@@ -16,83 +16,31 @@
 				<h1>jQuery Mobile Bootstrap Theme</h1>
 				<div data-role="navbar">
 					<ul>
-						<li><a href="index.html" data-transition="fade" data-icon="home">Home</a></li>
-						<li><a href="buttons.html" data-icon="star">Buttons</a></li>
-						<li><a href="listviews.html" data-icon="grid">Lists</a></li>
-						<li><a href="nav.html" data-icon="search" class="ui-btn-active">Nav</a></li>
+                        <li><a href="logo.html" data-icon="logo">Logo</a></li>
+						<li><a href="mail.html" data-icon="mail">Mail to Manager</a></li>
+						<li><a href="adduser.html" data-icon="user">Add User</a></li>
+						<li><a href="search.html" data-icon="search" class="ui-btn-active">Search</a></li>
 						<li><a href="forms.html" data-icon="gear">Forms</a></li>
+					</ul>
+				</div>
+                <div data-role="navbar">
+					<ul>
+						<li><a href="index.html" data-transition="fade" data-icon="home">Home</a></li>
+						<li><a href="top10.html" data-icon="mail">Top 10</a></li>
+						<li><a href="discovery.html" data-icon="info">Discovery</a></li>
+                        <li><a href="alerts.html" data-transition="fade" data-icon="eye">Alerts</a></li>
 					</ul>
 				</div>
 			</div>
 			<div data-role="content" data-theme="a">
 
-				<a href="https://github.com/commadelimited/jQuery-Mobile-Bootstrap-Theme" data-role="button" data-icon="star">Get the code</a>
+                <p>IMAGE Creative idea <br /> name</p>
+                <p> Here's my idea </p>
+                <p>*****</p>
 
-				<h2>Navigation</h2>
+				<a href="https://github.com/commadelimited/jQuery-Mobile-Bootstrap-Theme" data-role="button" data-icon="star">What's Your Idea?</a>
 
-				<div data-role="header" data-position="inline">
-					<a href="index.html" data-icon="delete" data-theme="c">Cancel</a>
-					<h1>Edit Contact</h1>
-					<a href="index.html" data-icon="check" data-theme="d">Save</a>
-				</div><br />
-
-				<div data-role="footer" class="ui-bar">
-					<a href="index.html" data-role="button" data-icon="plus">Add</a>
-					<a href="index.html" data-role="button" data-icon="arrow-u">Up</a>
-					<a href="index.html" data-role="button" data-icon="arrow-d">Down</a>
-				</div><br />
-
-				<div data-role="footer" data-theme="f">
-					<div data-role="navbar">
-						<ul>
-							<li><a href="#" data-icon="check">Yes</a></li>
-							<li><a href="#" data-icon="delete">No</a></li>
-							<li><a href="#" data-icon="alert">Maybe</a></li>
-						</ul>
-					</div>
-				</div><br />
-
-				<div data-role="footer" data-theme="a">
-					<a href="index.html" data-role="button" data-icon="arrow-l" data-iconpos="right">left</a>
-					<a href="index.html" data-role="button" data-icon="arrow-r" data-iconpos="right">right</a>
-					<a href="index.html" data-role="button" data-icon="arrow-u" data-iconpos="right">up</a>
-					<a href="index.html" data-role="button" data-icon="arrow-d" data-iconpos="right">down</a>
-				</div>
-
-				<div data-role="footer" data-theme="b">
-					<a href="index.html" data-role="button" data-icon="arrow-l" data-iconpos="right">left</a>
-					<a href="index.html" data-role="button" data-icon="arrow-r" data-iconpos="right">right</a>
-					<a href="index.html" data-role="button" data-icon="arrow-u" data-iconpos="right">up</a>
-					<a href="index.html" data-role="button" data-icon="arrow-d" data-iconpos="right">down</a>
-				</div>
-
-			    <div data-role="footer" data-theme="c">
-					<a href="index.html" data-role="button" data-icon="arrow-l" data-iconpos="right">left</a>
-					<a href="index.html" data-role="button" data-icon="arrow-r" data-iconpos="right">right</a>
-					<a href="index.html" data-role="button" data-icon="arrow-u" data-iconpos="right">up</a>
-					<a href="index.html" data-role="button" data-icon="arrow-d" data-iconpos="right">down</a>
-				</div>
-
-				<div data-role="footer" data-theme="d">
-					<a href="index.html" data-role="button" data-icon="arrow-l" data-iconpos="right">left</a>
-					<a href="index.html" data-role="button" data-icon="arrow-r" data-iconpos="right">right</a>
-					<a href="index.html" data-role="button" data-icon="arrow-u" data-iconpos="right">up</a>
-					<a href="index.html" data-role="button" data-icon="arrow-d" data-iconpos="right">down</a>
-				</div>
-
-				<div data-role="footer" data-theme="e">
-					<a href="index.html" data-role="button" data-icon="arrow-l" data-iconpos="right">left</a>
-					<a href="index.html" data-role="button" data-icon="arrow-r" data-iconpos="right">right</a>
-					<a href="index.html" data-role="button" data-icon="arrow-u" data-iconpos="right">up</a>
-					<a href="index.html" data-role="button" data-icon="arrow-d" data-iconpos="right">down</a>
-				</div>
-
-				<div data-role="footer" data-theme="f">
-					<a href="index.html" data-role="button" data-icon="arrow-l" data-iconpos="right">left</a>
-					<a href="index.html" data-role="button" data-icon="arrow-r" data-iconpos="right">right</a>
-					<a href="index.html" data-role="button" data-icon="arrow-u" data-iconpos="right">up</a>
-					<a href="index.html" data-role="button" data-icon="arrow-d" data-iconpos="right">down</a>
-				</div>
+				
 
 			</div>
 		</div>
