--- a/nav.html
+++ b/nav.html
@@ -38,7 +38,7 @@
                 <p> Here's my idea </p>
                 <p>*****</p>
 
-				<a href="https://github.com/commadelimited/jQuery-Mobile-Bootstrap-Theme" data-transition="flip" data-role="button" data-icon="star">What's Your Idea?</a>
+				<a href="idea.html" data-transition="flip" data-role="button" data-icon="star">What Is Your Idea?</a>
 
 				
 
