--- a/forms.html
+++ b/forms.html
@@ -135,6 +135,16 @@
 						</select>
 					</div>
 
+                    <div data-role="navbar" data-grid="d">
+                        <ul>
+                            <li><a href="#" class="ui-btn-active">One</a></li>
+                            <li><a href="#">Two</a></li>
+                            <li><a href="#">Three</a></li>
+                            <li><a href="#">Four</a></li>
+                            <li><a href="#">Five</a></li>
+                        </ul>
+                    </div><!-- /navbar -->
+
 					<div class="ui-body ui-body-b">
 						<fieldset class="ui-grid-a">
 							<div class="ui-block-a"><button type="submit" data-theme="d">Cancel</button></div>
