--- a/idea.html
+++ b/idea.html
@@ -9,89 +9,45 @@
 		<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
 		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
+        <link type="text/css" rel="stylesheet" href="jquery.ratings.css" />
+        <script src="jquery-1.3.2.min.js"></script>
+        <script src="jquery.ratings.js"></script>
+        <script src="example.js"></script>
 	</head>
 	<body>
 		<div data-role="page" data-theme="a">
-			<div data-role="header" data-position="inline">
-				<h1>jQuery Mobile Bootstrap Theme</h1>
+
 				<div data-role="navbar">
 					<ul>
-						<li><a href="index.html" data-icon="home">Home</a></li>
-						<li><a href="buttons.html" data-icon="star">Buttons</a></li>
-						<li><a href="listviews.html" data-icon="grid">Lists</a></li>
-						<li><a href="nav.html" data-icon="search" class="ui-btn-active">Nav</a></li>
-						<li><a href="forms.html" data-icon="gear">Forms</a></li>
+						<li><a href="index.html" data-icon="back" class="ui-btn-active">Go Back</a></li>
 					</ul>
 				</div>
-			</div>
 			<div data-role="content" data-theme="a">
-
-				<a href="https://github.com/commadelimited/jQuery-Mobile-Bootstrap-Theme" data-role="button" data-icon="star">Get the code</a>
-
-				<h2>Navigation</h2>
-
-				<div data-role="header" data-position="inline">
-					<a href="index.html" data-icon="delete" data-theme="c">Cancel</a>
-					<h1>Edit Contact</h1>
-					<a href="index.html" data-icon="check" data-theme="d">Save</a>
-				</div><br />
-
-				<div data-role="footer" class="ui-bar">
-					<a href="index.html" data-role="button" data-icon="plus">Add</a>
-					<a href="index.html" data-role="button" data-icon="arrow-u">Up</a>
-					<a href="index.html" data-role="button" data-icon="arrow-d">Down</a>
-				</div><br />
-
-				<div data-role="footer" data-theme="f">
-					<div data-role="navbar">
-						<ul>
-							<li><a href="#" data-icon="check">Yes</a></li>
-							<li><a href="#" data-icon="delete">No</a></li>
-							<li><a href="#" data-icon="alert">Maybe</a></li>
-						</ul>
-					</div>
-				</div><br />
-
-				<div data-role="footer" data-theme="a">
-					<a href="index.html" data-role="button" data-icon="arrow-l" data-iconpos="right">left</a>
-					<a href="index.html" data-role="button" data-icon="arrow-r" data-iconpos="right">right</a>
-					<a href="index.html" data-role="button" data-icon="arrow-u" data-iconpos="right">up</a>
-					<a href="index.html" data-role="button" data-icon="arrow-d" data-iconpos="right">down</a>
+                <h2>What is your idea?</h2>
+                <div data-role="fieldcontain">
+						<textarea cols="40" rows="8" name="textarea" id="textarea1"></textarea>
 				</div>
-
-				<div data-role="footer" data-theme="b">
-					<a href="index.html" data-role="button" data-icon="arrow-l" data-iconpos="right">left</a>
-					<a href="index.html" data-role="button" data-icon="arrow-r" data-iconpos="right">right</a>
-					<a href="index.html" data-role="button" data-icon="arrow-u" data-iconpos="right">up</a>
-					<a href="index.html" data-role="button" data-icon="arrow-d" data-iconpos="right">down</a>
+                <h2>What excites you about your idea?</h2>
+                <div data-role="fieldcontain">
+						<textarea cols="40" rows="8" name="textarea" id="textarea2"></textarea>
 				</div>
-
-			    <div data-role="footer" data-theme="c">
-					<a href="index.html" data-role="button" data-icon="arrow-l" data-iconpos="right">left</a>
-					<a href="index.html" data-role="button" data-icon="arrow-r" data-iconpos="right">right</a>
-					<a href="index.html" data-role="button" data-icon="arrow-u" data-iconpos="right">up</a>
-					<a href="index.html" data-role="button" data-icon="arrow-d" data-iconpos="right">down</a>
+                <h2>How will your idea improve processes at Mylan?</h2>
+				<div data-role="fieldcontain">
+						<textarea cols="40" rows="8" name="textarea" id="textarea"></textarea>
 				</div>
+                <form>
+                    <h3>Have a picture? Upload It Here!</h3>
+                    <input type="file" data-clear-btn="false" name="file-1" id="file-1" value="">
+                </form>
+                <br  />
+                <div id="example-2"></div> <br />
+                Your Rating: <span id="example-rating-2">not set</span>
 
-				<div data-role="footer" data-theme="d">
-					<a href="index.html" data-role="button" data-icon="arrow-l" data-iconpos="right">left</a>
-					<a href="index.html" data-role="button" data-icon="arrow-r" data-iconpos="right">right</a>
-					<a href="index.html" data-role="button" data-icon="arrow-u" data-iconpos="right">up</a>
-					<a href="index.html" data-role="button" data-icon="arrow-d" data-iconpos="right">down</a>
-				</div>
-
-				<div data-role="footer" data-theme="e">
-					<a href="index.html" data-role="button" data-icon="arrow-l" data-iconpos="right">left</a>
-					<a href="index.html" data-role="button" data-icon="arrow-r" data-iconpos="right">right</a>
-					<a href="index.html" data-role="button" data-icon="arrow-u" data-iconpos="right">up</a>
-					<a href="index.html" data-role="button" data-icon="arrow-d" data-iconpos="right">down</a>
-				</div>
-
-				<div data-role="footer" data-theme="f">
-					<a href="index.html" data-role="button" data-icon="arrow-l" data-iconpos="right">left</a>
-					<a href="index.html" data-role="button" data-icon="arrow-r" data-iconpos="right">right</a>
-					<a href="index.html" data-role="button" data-icon="arrow-u" data-iconpos="right">up</a>
-					<a href="index.html" data-role="button" data-icon="arrow-d" data-iconpos="right">down</a>
+			    <div class="ui-body ui-body-b">
+						<fieldset class="ui-grid-a">
+							<div class="ui-block-a"><button type="submit" data-theme="d">Submit</button></div>
+                            <div class="ui-block-b"><button type="submit" data-theme="a">Cancel</button></div>
+					    </fieldset>
 				</div>
 
 			</div>
