--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 				<h2>Overview</h2>
-                <img src="start.jpg" style="width:304px;height:228px">
+                 <img src="logo1.png" height="960" width="640">
 				<p>
 					The jQuery Mobile Bootstrap theme is meant to duplicate the appearance of <a href="http://twbs.github.io/bootstrap/">Bootstrap</a> within the context of a jQuery Mobile application. Currently only the colors are mimiced, but eventually some of the components might also work their way into the theme.
 				</p>
