--- a/idea.html
+++ b/idea.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<title>jQuery Mobile Bootstrap Theme</title>
 		<link rel="stylesheet" href="themes/Bootstrap.css">
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
 		<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
@@ -16,27 +15,26 @@
 	</head>
 	<body>
 		<div data-role="page" data-theme="a">
-
 				<div data-role="navbar">
 					<ul>
-						<li><a href="index.html" data-icon="back" class="ui-btn-active">Go Back</a></li>
+						<li><a href="nav.html" data-icon="back" class="ui-btn-active">Go Back</a></li>
 					</ul>
 				</div>
 			<div data-role="content" data-theme="a">
-                <h2>What is your idea?</h2>
+                <h3>What is your idea?</h3>
                 <div data-role="fieldcontain">
 						<textarea cols="40" rows="8" name="textarea" id="textarea1"></textarea>
 				</div>
-                <h2>What excites you about your idea?</h2>
+                <h3>What excites you about your idea?</h3>
                 <div data-role="fieldcontain">
 						<textarea cols="40" rows="8" name="textarea" id="textarea2"></textarea>
 				</div>
-                <h2>How will your idea improve processes at Mylan?</h2>
+                <h3>How will your idea improve processes at Mylan?</h3>
 				<div data-role="fieldcontain">
 						<textarea cols="40" rows="8" name="textarea" id="textarea"></textarea>
 				</div>
                 <form>
-                    <h3>Have a picture? Upload It Here!</h3>
+                    <h4>Have a picture? Upload It Here!</h4>
                     <input type="file" data-clear-btn="false" name="file-1" id="file-1" value="">
                 </form>
                 <br  />
@@ -45,7 +43,7 @@
 
 			    <div class="ui-body ui-body-b">
 						<fieldset class="ui-grid-a">
-							<div class="ui-block-a"><button type="submit" data-theme="d">Submit</button></div>
+							<div class="ui-block-a"><button type="submit" data-theme="f">Submit</button></div>
                             <div class="ui-block-b"><button type="submit" data-theme="a">Cancel</button></div>
 					    </fieldset>
 				</div>
