--- a/nav.html
+++ b/nav.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="utf-8">
         <meta name="viewport" content="width=320px">
-		<title>jQuery Mobile Bootstrap Theme</title>
 		<link rel="stylesheet" href="themes/Bootstrap.css">
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
 		<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
@@ -13,32 +12,34 @@
 	<body>
 		<div data-role="page" data-theme="a">
 			<div data-role="header" data-position="inline">
-				<h1>jQuery Mobile Bootstrap Theme</h1>
 				<div data-role="navbar">
 					<ul>
-                        <li><a href="logo.html" data-icon="logo">Logo</a></li>
-						<li><a href="mail.html" data-icon="mail">Mail to Manager</a></li>
-						<li><a href="adduser.html" data-icon="user">Add User</a></li>
-						<li><a href="search.html" data-icon="search" class="ui-btn-active">Search</a></li>
-						<li><a href="forms.html" data-icon="gear">Forms</a></li>
+                        
+						<li><a href="mail.html" data-icon="mail" data-theme="f">Mail to Manager</a></li>
+						<li><a href="security.html" data-icon="lock" data-theme="f">Security Info</a></li>
 					</ul>
 				</div>
                 <div data-role="navbar">
 					<ul>
-						<li><a href="index.html" data-transition="fade" data-icon="home">Home</a></li>
-						<li><a href="top10.html" data-icon="mail">Top 10</a></li>
-						<li><a href="discovery.html" data-icon="info">Discovery</a></li>
-                        <li><a href="alerts.html" data-transition="fade" data-icon="eye">Alerts</a></li>
+						<li><a href="index.html" data-transition="fade" data-icon="home" data-theme="f">Home</a></li>
+						<li><a href="top10.html" data-icon="mail" data-theme="f">Top 10</a></li>
+						<li><a href="discovery.html" data-icon="info" data-theme="f">Discovery</a></li>
+                        <li><a href="search.html" data-icon="search" class="ui-btn-active" data-theme="f">Search</a></li>
 					</ul>
 				</div>
 			</div>
 			<div data-role="content" data-theme="a">
-
-                <p>IMAGE Creative idea <br /> name</p>
-                <p> Here's my idea </p>
-                <p>*****</p>
-
-				<a href="idea.html" data-transition="flip" data-role="button" data-icon="star">What Is Your Idea?</a>
+                <a href="idea.html" data-transition="flip" data-role="button" data-icon="star">What Is Your Idea?</a>
+                <p><img src="logo6short.png" height="17%" width="22%"> Biodegradable Packaging <br />
+                 My idea is to create a medical transport packaging that is biodegradable so that it is good for the environment.
+	            <br />Mary Carter<br />
+                5 star average of 54 people <br /></p>
+                <p><img src="logo6short.png" height="17%" width="22%"> Blahblahblah <br /> name
+                 Here's my idea
+                ***** <br /></p>
+                <p><img src="logo6short.png" height="17%" width="22%"> Blahblahblah <br /> name
+                 Here's my idea
+                ***** <br /></p>
 
 				
 
