--- a/idea.html
+++ b/idea.html
@@ -17,7 +17,7 @@
 		<div data-role="page" data-theme="a">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="nav.html" data-icon="back" class="ui-btn-active">Go Back</a></li>
+						<li><a href="nav.html" data-icon="back" class="ui-btn-active" data-theme="f">Go Back</a></li>
 					</ul>
 				</div>
 			<div data-role="content" data-theme="a">
@@ -41,6 +41,7 @@
                 <div id="example-2"></div> <br />
                 Your Rating: <span id="example-rating-2">not set</span>
 
+                    <h4>By entering your name below, you are authorizing the ownership of your idea shall be under the authority of Mylan.</h4>
 			    <div class="ui-body ui-body-b">
 						<fieldset class="ui-grid-a">
 							<div class="ui-block-a"><button type="submit" data-theme="f">Submit</button></div>
