--- a/nav.html
+++ b/nav.html
@@ -33,7 +33,7 @@
                 <p><img src="logo6short.png" height="17%" width="22%"> Biodegradable Packaging <br />
                  My idea is to create a medical transport packaging that is biodegradable so that it is good for the environment.
 	            <br />Mary Carter<br />
-                5 star average of 54 people <br /></p>
+                >5 star average of 54 people <br /></p>
                 <p><img src="logo6short.png" height="17%" width="22%"> Blahblahblah <br /> name
                  Here's my idea
                 ***** <br /></p>
