--- a/idea.html
+++ b/idea.html
@@ -31,7 +31,7 @@
 				</div>
                 <h3>How will your idea improve processes at Mylan?</h3>
 				<div data-role="fieldcontain">
-						<textarea cols="40" rows="8" name="textarea" id="textarea"></textarea>
+						<textarea cols="40" rows="8" name="textarea" id="textarea4"></textarea>
 				</div>
                 <form>
                     <h4>Have a picture? Upload It Here!</h4>
@@ -41,11 +41,16 @@
                 <div id="example-2"></div> <br />
                 Your Rating: <span id="example-rating-2">not set</span>
 
-                    <h4>By entering your name below, you are authorizing the ownership of your idea shall be under the authority of Mylan.</h4>
+                <h4>By entering your name below, you are authorizing the ownership of your idea shall be under the authority of Mylan.</h4
+                <div data-role="fieldcontain">
+						<textarea cols="40" rows="8" name="textarea" id="textarea3"></textarea>
+				</div>
+
+
 			    <div class="ui-body ui-body-b">
 						<fieldset class="ui-grid-a">
-							<div class="ui-block-a"><button type="submit" data-theme="f">Submit</button></div>
-                            <div class="ui-block-b"><button type="submit" data-theme="a">Cancel</button></div>
+							<a href="nav.html"><div class="ui-block-a"><button type="submit" data-theme="f">Submit</button></div></a>
+                            <a href="nav.html"><div class="ui-block-b"><button type="submit" data-theme="a">Cancel</button></div></a>
 					    </fieldset>
 				</div>
 
