--- a/nav.html
+++ b/nav.html
@@ -8,6 +8,10 @@
 		<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
 		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
+        <link type="text/css" rel="stylesheet" href="jquery.ratings.css" />
+        <script src="jquery-1.3.2.min.js"></script>
+        <script src="jquery.ratings.js"></script>
+        <script src="example.js"></script>
 	</head>
 	<body>
 		<div data-role="page" data-theme="a">
@@ -33,13 +37,19 @@
                 <p><img src="logo6short.png" height="17%" width="22%"> Biodegradable Packaging <br />
                  My idea is to create a medical transport packaging that is biodegradable so that it is good for the environment.
 	            <br />Mary Carter<br />
-                >5 star average of 54 people <br /></p>
-                <p><img src="logo6short.png" height="17%" width="22%"> Blahblahblah <br /> name
-                 Here's my idea
-                ***** <br /></p>
-                <p><img src="logo6short.png" height="17%" width="22%"> Blahblahblah <br /> name
-                 Here's my idea
-                ***** <br /></p>
+                5 star average of 54 people <br />
+
+                <p><img src="logo6short.png" height="17%" width="22%"> iApp for Vacation/Sick Days <br />
+                 My idea is to create an apple application that allows the employees to log their vacation and sick days from where ever they are so they don't need to call their supervisors.
+	            <br />Tim Flinn<br />
+                4 star average of 48 people <br />
+                </p>
+
+                <p><img src="logo6short.png" height="17%" width="22%"> Incentive Program <br />
+                 My idea is to create an incentive reward program for an extended period of Job Excellence.  So that employees will feel more valued and respected for the talents that they give to this burgeoning company.
+	            <br />James Allison<br />
+                4 star average of 29 people <br />
+                </p>
 
 				
 
