--- a/security.html
+++ b/security.html
@@ -14,15 +14,18 @@
         <script src="example.js"></script>
 	</head>
 	<body>
-		<div data-role="page" data-theme="a">
-				<div data-role="navbar">
+        <div data-role="navbar">
 					<ul>
-						<li><a href="nav.html" data-icon="back" class="ui-btn-active">Go Back</a></li>
+						<li><a href="nav.html" data-icon="back" class="ui-btn-active" data-theme="f">Go Back</a></li>
 					</ul>
 				</div>
-			<div data-role="content" data-theme="a">
-                <h3>Security Info</h3>
-                <p>Blahblahblahblah</p>
-		</div>
+        <h2>Security Info</h2>
+		<p>
+            Compliant with HIPAA, SOX, GLBA, PSS-DCI Policies
+		</p>
+        <h2>Mylan's Mission Statement</h2>
+        <p>
+            At Mylan, We are Committed to setting New Standards in Health Care.  Working together around the World to Provide 7 Billion People access to High Quality Medicine, we innovate to Satisfy unmet needs; make reliability and Service Excellence a habit; do what's Right, not what's easy; and impact the future through passionate Global Leadership.
+        </p>
 	</body>
 </html>
